# azuma_backend

./: Cargo.toml  Dockerfile  LICENSE
.github/workflows/: rust.yml
docs/: Dockerfile  README.md  api.yml  azuma.yml  index.html  index.html.md  mkdocs.yml
docs/docs/: authorization.md  error_messages.md  index.md  user.md
migrations/: 202007271830_create_sessions.sql  202007271840_create_users.sql
src/: api.rs  db.rs  main.rs  model.rs  rejection.rs  user.rs
src/account/: session.rs
src/api/: api_version.rs
src/handlers/: api_version.rs
src/middlewares/: session.rs
src/model/: permission.rs  request.rs  response.rs  session.rs  user.rs
src/models/: api_version.rs
src/routes/: api_version.rs
src/user/: login.rs  registration.rs  session.rs  user.rs
src/util/: mod.rs  to_document.rs
