[package]
name = "azuma_backend"
version = "0.0.0"
authors = ["okrplay <32576280+okrplay@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
log = "0.4"
mongodb = "0.9"
pretty_env_logger = "0.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["macros", "signal", "sync"] }
warp = "0.2"