[package]
name = "azuma_backend"
version = "0.0.0"
authors = ["okrplay <32576280+okrplay@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "0.14"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
lazy_static = "^1.4"
log = "0.4"
mongodb = "0.9"
pbkdf2 = "0.3"
pretty_env_logger = "0.3"
rsgen = "0.2"
serde = { version = "^1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["macros", "signal", "stream", "sync"] }
warp = "0.2"