[package]
name = "azuma_backend"
version = "0.0.0"
authors = ["okrplay <32576280+okrplay@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
log = "0.4"
mongodb = "^1.0"
pbkdf2 = "0.4"
pretty_env_logger = "0.4"
rsgen = "0.2"
serde = { version = "^1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["macros", "rt-threaded", "signal", "stream", "sync"] }
warp = "0.2"